[build-system]
requires = ["setuptools~=65.6", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name         = "esphome-dashboard-api"
version      = "1.2.1"
license      = {text = "MIT"}
description  = "API to interact with ESPHome Dashboard"
readme       = "README.md"
authors      = [
    {name = "ESPHome", email = "esphome@nabucasa.com"}
]
requires-python = ">=3.4.0"
dependencies = [
  "aiohttp",
]

[project.urls]
"Homepage" = "https://github.com/home-assistant/frontend"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["esphome_dashboard_api*"]
