[build-system]
requires = ["setuptools>=69.0.2", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[project]
name         = "esphome-dashboard-api"
version      = "1.2.3"
license      = {text = "MIT"}
description  = "API to interact with ESPHome Dashboard"
readme       = "README.md"
authors      = [
    {name = "ESPHome", email = "esphome@nabucasa.com"}
]
requires-python = ">=3.4.0"
dependencies = [
  "aiohttp",
  "orjson"
]

[project.urls]
"Homepage" = "https://github.com/esphome/dashboard-api"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["esphome_dashboard_api*"]
