[build-system]
requires = ["setuptools>=65.6"]
build-backend = "setuptools.build_meta"

[project]
name         = "esphome-dashboard-api"
version      = "1.2.3"
license      = {text = "MIT"}
description  = "API to interact with ESPHome Dashboard"
readme       = "README.md"
authors      = [
    {name = "ESPHome", email = "esphome@nabucasa.com"}
]
requires-python = ">=3.4.0"
dependencies = [
  "aiohttp",
]

[project.urls]
"Homepage" = "https://github.com/esphome/dashboard-api"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["esphome_dashboard_api*"]
